# unn_lab_parallel_num_meth

./: CMakeLists.txt
1_lu_decomposition/: CMakeLists.txt  implementation.cpp  results.md  test.cpp  trash.cpp
2_biconjugate_gradient/: CMakeLists.txt  helpers.h  implementation.cpp  math_types.h  results.md  test.cpp  trash.cpp
